fix management of config environment.